...
@Preview
@Composable
private fun HorizontalSearchItemPreview() {
    HorizontalSearchItem(
        name = "Fast & Furious X",
        imageUrl = "https://image.tmdb.org/t/p/w500/1E5baAaEse26fej7uHcjOgEE2t2.jpg",
        year = "2023",
        testTag = "search_item_0",
        onClick = {}
    )
}

